--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@svgr/webpack": "6.2.1",
     "html-react-parser": "^3.0.1",
     "jstoxml": "^2.2.7",
-    "next": "^11.0.0",
+    "next": "^14.1.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.7",
     "typescript": "^4.6.4",
@@ -26,9 +26,7 @@
   "devDependencies": {
     "@types/css-modules": "^1.0.2",
     "@types/node": "^18.0.4",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.16",
+    "@types/react": "18.2.57",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.23.0",
@@ -43,11 +41,10 @@
     "stylelint-config-sass-guidelines": "^9.0.0"
   },
   "scripts": {
-    "dev": "NODE_ENV=development next",
-    "start": "NODE_ENV=production next start",
+    "dev": "next dev",
     "build": "next build",
-    "eslint": "eslint ./src",
-    "stylelint": "stylelint ./src"
+    "start": "next start",
+    "lint": "next lint"
   },
   "browserslist": {
     "production": [
